--- a/source/g3d_viewer/CMakeLists.txt
+++ b/source/g3d_viewer/CMakeLists.txt
@@ -62,7 +62,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER)
 		MESSAGE(STATUS " wxWidgets: ${wxWidgets_INCLUDE_DIRS} ;/;  ${wxWidgets_LIBRARIES}")
 	ENDIF()
 
-    IF(NOT VS_BUILD)
+    IF(NOT MSVC)
 		find_package(PkgConfig REQUIRED)
 	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
@@ -98,7 +98,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER)
     ENDIF()
 
 	IF(WIN32)
-		IF(NOT VS_BUILD)
+		IF(NOT MSVC)
 			SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib/libwx_mswu-2.8-i586-mingw32msvc.dll.a)
 			SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib/libwx_mswu_gl-2.8-i586-mingw32msvc.dll.a)
 			SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib/libwxpng-2.8-i586-mingw32msvc.a)
