--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -4,7 +4,7 @@
 OPTION(FORCE_EMBEDDED_LIBS "Force use of embedded libraries' code." OFF)
 
 # IMPORTANT: should come BEFORE finding packages
-IF(NOT VS_BUILD)
+IF(NOT MSVC)
 	find_package(PkgConfig REQUIRED)
 ENDIF()
 
@@ -296,7 +296,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		FIND_PACKAGE(Miniupnpc)
 	ENDIF()
 
-	if(NOT MINIUPNP_FOUND OR VS_BUILD)
+	if(NOT MINIUPNP_FOUND OR MSVC)
 		if(NOT FORCE_USE_EMBEDDED_Miniupnpc)
 			MESSAGE(STATUS "*** Using EMBEDDED miniupnpc since dev system does not have it... MINIUPNP_FOUND [${MINIUPNP_FOUND}]")
 		else()
@@ -312,7 +312,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 			else()
 				add_definitions (-D_POSIX_C_SOURCE=200809L)
 			endif ()
-		ELSEIF(VS_BUILD)
+		ELSEIF(MSVC)
 			ADD_COMPILE_DEFINITIONS(MINIUPNP_STATICLIB)
 		endif()
 
