--- a/source/shared_lib/sources/streflop/CMakeLists.txt
+++ b/source/shared_lib/sources/streflop/CMakeLists.txt
@@ -13,7 +13,7 @@ INCLUDE_DIRECTORIES(
 
 SET(STREFLOP_SRC ${STREFLOP_GLOBBED_CPP})
 
-IF(VS_BUILD)
+IF(MSVC)
 	ENABLE_LANGUAGE(ASM_MASM)
 	SET(STREFLOP_SRC ${STREFLOP_SRC} FPUSettings.asm)
 ENDIF()
@@ -22,6 +22,6 @@ ADD_LIBRARY(streflop STATIC EXCLUDE_FROM_ALL
 	${STREFLOP_SRC}
 )
 
-IF(NOT VS_BUILD)
+IF(NOT MSVC)
 	set_target_properties(streflop PROPERTIES COMPILE_FLAGS "${PIC_FLAG}")
 ENDIF()
