--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -140,7 +140,7 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 
 
-	IF(NOT VS_BUILD)
+	IF(NOT MSVC)
     	find_package(PkgConfig REQUIRED)
 	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
@@ -264,7 +264,7 @@ IF(BUILD_MEGAGLEST)
 		add_custom_target(run ALL DEPENDS mg.tmp)
 	ENDIF()
 
-	IF(WIN32 AND NOT VS_BUILD)
+	IF(WIN32 AND NOT MSVC)
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-subsystem,console -mconsole")
 	ENDIF()
 
