--- a/source/shared_lib/meson.build
+++ b/source/shared_lib/meson.build
@@ -1,6 +1,6 @@
 # subdir('sources/streflop')
-subdir('sources/feathery_ftp')
 # subdir('sources/util')
+subdir('sources/feathery_ftp')
 
 src = []
 
@@ -19,10 +19,6 @@ foreach file : src_basename
     src += [join_paths('sources/util/', file)]
 endforeach
 
-inc_util = [
-
-]
-
 src_basename = [
   'base_thread.cpp',
   'byte_order.cpp',
@@ -33,6 +29,30 @@ src_basename = [
 
 foreach file : src_basename
     src += [join_paths('sources/platform/common/', file)]
+endforeach
+
+src_basename = [
+  'ircclient.cpp',
+  'miniftpclient.cpp',
+  'miniftpserver.cpp',
+  'socket.cpp',
+]
+
+foreach file : src_basename
+    src += [join_paths('sources/platform/posix/', file)]
+endforeach
+
+src_basename = [
+  'factory_repository.cpp',
+  'gl_wrap.cpp',
+  'platform_util.cpp',
+  'thread.cpp',
+  'window.cpp',
+  'window_gl.cpp',
+]
+
+foreach file : src_basename
+    src += [join_paths('sources/platform/sdl/', file)]
 endforeach
 
 dep_curl = dependency('libcurl')
@@ -55,8 +75,22 @@ endif
 dep_cppunit = dependency('cppunit')
 dep_fribidi = dependency('fribidi')
 dep_glib = dependency('glib-2.0')
-#dep_ = dependency('')
-#dep_ = dependency('')
+# TODO: needs condition for OSes which can/ can't find libircclient.
+# dep_ircclient = dependency('libircclient')
+inc_ircclient = '/usr/include/libircclient'
+dep_ircclient = cxx.find_library(
+  'libircclient', 
+  has_headers: 'libircclient.h',
+  header_include_directories: include_directories(inc_ircclient),
+  )
+
+inc_miniupnpc = ['/usr/include/miniupnpc', 'include/platform/miniupnpc']
+dep_ircclient = cxx.find_library(
+  'miniupnpc', 
+  has_headers: 'miniupnpc.h',
+  header_include_directories: include_directories(inc_miniupnpc),
+  )
+dep_miniupnpc = dependency('miniupnpc')
 #dep_ = dependency('')
 #dep_ = dependency('')
 #dep_ = dependency('')
@@ -97,20 +131,33 @@ lib_megaglest = static_library(
   'megaglest',
   src,
   include_directories : [
-    'include/streflop',
+    'include/graphics',
+    'include/map',
+    'include/xml',
+    'include/sound',
+    'include/sound/openal',
     'include/platform/common',
     'include/platform/posix',
     'include/platform/sdl',
     'include/graphics',
+    'include/graphics/gl',
     'include/util/',
     'include/util/utf8',
+    inc_ircclient,
+    inc_miniupnpc,
   ],
   dependencies: [
 	dep_curl,
-	dep_sdl, dep_x11, dep_openal, dep_lua,
+	dep_sdl,
+  dep_x11,
+  dep_openal,
+  dep_lua,
 	dep_cppunit,
 	dep_fribidi,
-	dep_glib
+	dep_glib,
+  dep_feathery_ftp,
+  dep_ircclient,
+  dep_miniupnpc,
 	]
   )
 
