--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,8 @@ project(
   )
 
 # Setup compiler.
-compiler = meson.get_compiler('cpp')
+cxx = meson.get_compiler('cpp')
+cc = meson.get_compiler('c')
 
 #add_global_arguments(
 #  [
