--- a/source/shared_lib/meson.build
+++ b/source/shared_lib/meson.build
@@ -16,7 +16,7 @@ src_basename = [
 ]
 
 foreach file : src_basename
-    src += [join_paths('sources/util/', file)]
+    src += [join_paths('sources/util', file)]
 endforeach
 
 src_basename = [
@@ -28,7 +28,7 @@ src_basename = [
 ]
 
 foreach file : src_basename
-    src += [join_paths('sources/platform/common/', file)]
+    src += [join_paths('sources/platform/common', file)]
 endforeach
 
 src_basename = [
@@ -39,7 +39,7 @@ src_basename = [
 ]
 
 foreach file : src_basename
-    src += [join_paths('sources/platform/posix/', file)]
+    src += [join_paths('sources/platform/posix', file)]
 endforeach
 
 src_basename = [
@@ -52,13 +52,87 @@ src_basename = [
 ]
 
 foreach file : src_basename
-    src += [join_paths('sources/platform/sdl/', file)]
+    src += [join_paths('sources/platform/sdl', file)]
+endforeach
+
+src_basename = [
+  'BMPReader.cpp',
+  'graphics_interface.cpp',
+  'quaternion.cpp',
+  'buffer.cpp',
+  'ImageReaders.cpp',
+  'shader.cpp',
+  'camera.cpp',
+  'interpolation.cpp',
+  'shader_manager.cpp',
+  'context.cpp',
+  'JPGReader.cpp',
+  'texture.cpp',
+  'FileReader.cpp',
+  'model.cpp',
+  'texture_manager.cpp',
+  'font.cpp',
+  'model_manager.cpp',
+  'TGAReader.cpp',
+  'font_manager.cpp',
+  'particle.cpp',
+  'video_player.cpp',
+  'font_text.cpp',
+  'pixmap.cpp',
+  'PNGReader.cpp',
+]
+
+foreach file : src_basename
+    src += [join_paths('sources/graphics', file)]
+endforeach
+
+src_basename = [
+  'base_renderer.cpp',
+  'opengl.cpp',
+  'context_gl.cpp',
+  'particle_renderer_gl.cpp',
+  'font_gl.cpp',
+  'shader_gl.cpp',
+  'font_textFTGL.cpp',
+  'text_renderer_gl.cpp',
+  'model_gl.cpp',
+  'texture_gl.cpp',
+  'model_renderer_gl.cpp',
+]
+
+foreach file : src_basename
+    src += [join_paths('sources/graphics/gl', file)]
+endforeach
+
+src_basename = [
+  'sound_file_loader.cpp',
+  'sound_player.cpp',
+  'sound.cpp',
+  'sound_interface.cpp',
+]
+
+foreach file : src_basename
+    src += [join_paths('sources/sound', file)]
+endforeach
+
+src_shared_lib_misc = [
+  'sound/openal/sound_player_openal.cpp',
+  'platform/unix/gl_wrap.cpp',
+  'compression/compression_utils.cpp',
+  'lua/lua_script.cpp',
+  'miniz/miniz.c',
+  'map/map_preview.cpp',
+  'xml/xml_parser.cpp'
+]
+
+foreach file : src_shared_lib_misc
+    src += [join_paths('sources', file)]
 endforeach
 
 dep_curl = dependency('libcurl')
 dep_sdl = dependency('sdl2')
-dep_x11 = dependency('x11')
 dep_openal = dependency('openal')
+dep_ftgl = dependency('ftgl')
 
 # Using simply 'lua' doesn't work on all Linux distributions
 # See https://github.com/mesonbuild/meson/issues/4553 for more info
@@ -68,13 +142,10 @@ foreach name : ['lua', 'lua5.3', 'lua-5.3', 'lua53']
         break
     endif
 endforeach
+
 if not dep_lua.found()
     error('Lua could not be found!')
 endif
-
-dep_cppunit = dependency('cppunit')
-dep_fribidi = dependency('fribidi')
-dep_glib = dependency('glib-2.0')
 
 inc_ircclient = []
 dep_irclient = []
@@ -94,74 +165,52 @@ endif
 inc_miniupnpc = ['include/platform/miniupnpc']
 dep_miniupnpc = []
 dep_miniupnpc = dependency('miniupnpc')
-if not dep_miniupnpc.found()
+if not dep_miniupnpc.found() # TODO: review/test for if the library isn't installed.
   dep_miniupnpc = cxx.find_library('miniupnpc', required: false)
   inc_miniupnpc += '/usr/include/miniupnpc'
 endif
 
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
-#dep_ = dependency('')
+inc_shared_lib_misc_basename = [
+  'graphics',
+  'map',
+  'xml',
+  'sound',
+  'sound/openal',
+  'platform/common',
+  'platform/posix',
+  'platform/sdl',
+  'graphics',
+  'graphics/gl',
+  'util/',
+  'util/utf8',
+  'compression',
+  'lua',
+]
 
-#-lcppunit
-#-lfribidi
-#-lglib-2.0
-#-lGL
-#-lGLU
-#-lSM
-#-lICE
-#-lXext
-#-lopenal
-#-llua5.3
-#-lm #£ math lib
-#-ldl
-#-ljpeg
-#-lpng
-#-lfontconfig
-#-lftgl
-#-lfreetype
-#-lGLEW
-#-lminiupnpc
-#-lircclient
-#-lSDL2main
-#-lfribidi
-#-lglib-2.0
+inc_shared_lib_misc = []
+
+foreach file : inc_shared_lib_misc_basename
+    inc_shared_lib_misc += [join_paths('include', file)]
+endforeach
 
 lib_megaglest = static_library(
   'megaglest',
   src,
   include_directories : [
-    'include/graphics',
-    'include/map',
-    'include/xml',
-    'include/sound',
-    'include/sound/openal',
-    'include/platform/common',
-    'include/platform/posix',
-    'include/platform/sdl',
-    'include/graphics',
-    'include/graphics/gl',
-    'include/util/',
-    'include/util/utf8',
+    inc_shared_lib_misc,
+    'sources', # for miniz
     inc_ircclient,
     inc_miniupnpc,
   ],
   dependencies: [
-  dep_curl,
-  dep_sdl,
-  dep_openal,
-  dep_lua,
-  dep_feathery_ftp,
-  dep_ircclient,
-  dep_miniupnpc,
+    dep_curl,
+    dep_sdl,
+    dep_openal,
+    dep_lua,
+    dep_feathery_ftp,
+    dep_ircclient,
+    dep_miniupnpc,
+    dep_ftgl,
   ]
   )
 
