--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -29,7 +29,10 @@ IF(BUILD_MEGAGLEST)
 		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib)
 	ENDIF()
 
-	FIND_PACKAGE(${SDL_VERSION_NAME} REQUIRED)
+	if(NOT VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(${SDL_VERSION_NAME} REQUIRED)
+	ENDIF()
+
 	INCLUDE_DIRECTORIES(${${SDL_VERSION_NAME}_INCLUDE_DIR})
 	IF(UNIX)
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${${SDL_VERSION_NAME}_LIBRARY})
