Fix data-less appimages
Also revert adding APPIMAGE as path variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ OPTION(BUILD_MEGAGLEST_MAP_EDITOR "Build map editor" ON)
 OPTION(BUILD_MEGAGLEST "Build MegaGlest" ON)
 OPTION(BUILD_MEGAGLEST_TESTS "Build MegaGlest Unit Tests" OFF)
 OPTION(WANT_SINGLE_INSTALL_DIRECTORY "Use single install directory for everything. It is useful for example for MacOS cpack bundles." OFF)
+OPTION(WANT_APPIMAGE "Enable AppImage compatibility" ON)
 OPTION(WANT_STATIC_LIBS "Builds as many static libs as possible." OFF)
 OPTION(WANT_USE_VLC "Use libVLC to play videos." OFF)
 OPTION(WANT_USE_OpenSSL "Use libOpenSSL during CURL linking." ON)
@@ -108,6 +109,14 @@ IF(CMAKE_COMPILER_IS_GNUCXX OR MINGW)
 		MESSAGE(STATUS "Detected GNUC Compiler...")
 	ELSEIF(MINGW)
 		MESSAGE(STATUS "Detected MINGW Compiler...")
+	ENDIF()
+
+	IF(NOT WANT_APPIMAGE)
+		MESSAGE(STATUS "**Disable appimage code.")
+		ADD_COMPILE_DEFINITIONS(NO_APPIMAGE)
+	ELSEIF((NOT EXISTS "${PROJECT_SOURCE_DIR}/data/glest_game/CMakeLists.txt") AND "${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+		MESSAGE(STATUS "**AppImage compatiblity + nodata wanted. Adding flag \"APPIMAGE_NODATA\".")
+		ADD_COMPILE_DEFINITIONS(APPIMAGE_NODATA)
 	ENDIF()
 
     # Common generic GNU type compiler options that work with all generic GCC compatible compilers
