--- a/mk/linux/glest-dev.ini
+++ b/mk/linux/glest-dev.ini
@@ -1,3 +1,3 @@
-DataPath=$APPLICATIONPATH/../../data/glest_game/
+DataPath=$APPLICATIONPATH/../../../megaglest-source/data/glest_game/
 ServerListPath=$APPLICATIONPATH/../shared/
 GlestKeysIniPath=$APPLICATIONPATH/../shared/
