--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -7,19 +7,14 @@ on:
     branches: [ develop ]
 
 # The artifact only runs on the same distro that it was built on.
-# TODO: make AppImage instead
 jobs:
   make-snapshot:
     strategy:
       fail-fast: false
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    container: jammyjamjamman/megaglest-build-env:bionic
     steps:
     - uses: actions/checkout@v3
-    - name: Get dependencies
-      run: |
-        sudo apt-get update && sudo apt-get upgrade
-        sudo mk/linux/setupBuildDeps.sh
-        sudo apt install libfuse2
     - name: Build
       run:  |
         mk/linux/build-appimage.sh
