--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -82,49 +82,13 @@ jobs:
         path: c:/vcpkg/installed
         key: vcpkg-deps
 
-    - name: Install Dependencies
+    - name: Build MegaGlest
       run: |
-        vcpkg integrate install
-        vcpkg install brotli:x64-windows-static
-        vcpkg install bzip2:x64-windows-static
-        vcpkg install curl:x64-windows-static
-        vcpkg install expat:x64-windows-static
-        vcpkg install freetype:x64-windows-static
-        vcpkg install fribidi:x64-windows-static
-        vcpkg install ftgl:x64-windows-static
-        vcpkg install glew:x64-windows-static
-        vcpkg install libiconv:x64-windows-static
-        vcpkg install libjpeg-turbo:x64-windows-static
-        vcpkg install liblzma:x64-windows-static
-        vcpkg install libogg:x64-windows-static
-        vcpkg install libpng:x64-windows-static
-        vcpkg install libvorbis:x64-windows-static
-        vcpkg install libxml2:x64-windows-static
-        vcpkg install lua:x64-windows-static
-        vcpkg install openal-soft:x64-windows-static
-        vcpkg install opengl:x64-windows-static
-        vcpkg install miniupnpc:x64-windows-static
-        vcpkg install sdl2:x64-windows-static
-        vcpkg install sqlite3:x64-windows-static
-        vcpkg install tiff:x64-windows-static
-        vcpkg install tool-meson:x64-windows-static
-        vcpkg install wxwidgets:x64-windows-static
-        vcpkg install xerces-c:x64-windows-static
-        vcpkg install zlib:x64-windows-static
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      # Kinda guessing this using supertux + my own build scripts as guides.
-      run: cmake --no-warn-unused-cli -B ${{github.workspace}}/build -DCMAKE_TOOLCHAIN_FILE=c:/vcpkg/scripts/buildsystems/vcpkg.cmake -G "Visual Studio 17 2022" -T host=x64 -A x64 -DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=TRUE
-
-    - name: Build Mega Glest
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config Release --target ALL_BUILD
+        cd mk/windoze
+        ./build-mg-vs-cmake.ps1 -vcpkg-location c:/vcpkg/
 
     - name: Prepare Snapshot
       run: |
-        cd mk/windoze
         cp ..\shared\*.ini .
         $7zPath = $(Get-Command 7z).Source
         cp $7zPath .
